--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -39,7 +39,7 @@
   author={Broeze, Gerrit Benjamin},
   year={2006},
   url={https://research.vu.nl/ws/portalfiles/portal/42174612/complete+dissertation.pdf},
-  publisher={Vrije Universiteit},
+  school={Vrije Universiteit},
   address={Amsterdam}
 }
 @mastersthesis{buyuk_2023,
@@ -117,5 +117,102 @@
   booktitle={Proceedings of the 26th International Conference on World Wide Web},
   year={2017},
   doi={10.1145/3038912.3052660}
+}
+@article{hoogduin_2010,
+  title={Modified sieve sampling: A method for single-and multi-stage probability-proportional-to-size sampling},
+  author={Hoogduin, Lucas and Hall, Thomas W. and Tsay, Jack J.},
+  journal={Auditing: A Journal of Practice \& Theory},
+  volume={29},
+  number={1},
+  pages={125--148},
+  year={2010},
+  doi={10.2308/aud.2010.29.1.125}
+}
+@book{leslie_1979,
+  title={Dollar-unit Sampling: A Practical Guide for Auditors},
+  author={Leslie, David A. and Teitlebaum, Arthur D. and Anderson, Robert J.},
+  year={1979},
+  publisher={Pitman},
+  address={London}
+}
+@manual{stewart_2012,
+  title={Technical Notes on the AICPA Audit Guide Audit Sampling},
+  author={Stewart, Timothy R.},
+  organization={American Institute of Certified Public Accountants},
+  address={New York},
+  year={2012}
+}
+@phdthesis{stewart_2013,
+  title={A Bayesian Audit Assurance Model with Application to the Component Materiality problem in Group Audits},
+  author={Stewart, Timothy R.},
+  school={VU University},
+  address={Amsterdam},
+  year={2013},
+  url={https://hdl.handle.net/1871/39813}
+}
+@article{derks_2021,
+  title={Priors in a Bayesian audit: How integration of existing information into the prior distribution can improve audit transparency and efficiency},
+  author={Derks, Koen and de Swart, Jacques and van Batenburg, Paul and Wagenmakers, Eric-Jan and Wetzels, Ruud},
+  journal={International Journal of Auditing},
+  volume={25},
+  number={3},
+  pages={621--636},
+  year={2021},
+  doi={10.1111/ijau.12240}
+}
+@article{derks_2021b,
+  title={The Bayesian Approach to Audit Evidence: Quantifying Statistical Evidence using the Bayes Factor},
+  author={Derks, Koen and de Swart, Jacques and Wagenmakers, Eric-Jan and Wetzels, Ruud},
+  journal={PsyArXiv},
+  year={2021},
+  doi={10.31234/osf.io/kzqp5}
+}
+@article{derks_2022,
+  title={An Impartial Bayesian Hypothesis Test for Audit Sampling},
+  author={Derks, Koen and de Swart, Jacques and Wagenmakers, Eric-Jan and Wetzels, Ruud},
+  year={2022},
+  publisher={PsyArXiv},
+  doi={10.31234/osf.io/8nf3e}
+}
+@article{derks_2022b,
+  title={Bayesian Generalized Linear Modeling for Audit Sampling: How to Incorporate Audit Information into the Statistical Model},
+  author={Derks, Koen and de Swart, Jacques and Wagenmakers, Eric-Jan and Wetzels, Ruud},
+  journal={PsyArXiv},
+  year={2022},
+  doi={10.31234/osf.io/byj2a}
+}
+@inproceedings{benford_1938,
+  title={The law of anomalous numbers},
+  author={Benford, Frank},
+  booktitle={Proceedings of the American Philosophical Society},
+  volume={78},
+  number={4},
+  pages={551--572},
+  year={1938},
+  url={https://www.jstor.org/stable/984802}
+}
+@online{simonsohn_2019,
+  author={Simonsohn, Uri},
+  title={Number-Bunching: A New Tool for Forensic Data Analysis},
+  year={2019},
+  month={May 25},
+  url={https://datacolada.org/77}
+}
+@online{yu_2018,
+  author={Yu, F and Nelson, L and Simonsohn, U},
+  title={In Press at Psychological Science: A New 'Nudge' Supported by Implausible Data},
+  year={2018},
+  month={December 5},
+  url={https://datacolada.org/74}
+}
+@article{kass_1995,
+  title={Bayes factors},
+  author={Kass, R. E. and Raftery, A. E.},
+  journal={Journal of the American Statistical Association},
+  volume={90},
+  number={430},
+  pages={773--795},
+  year={1995},
+  doi={10.1080/01621459.1995.10476572}
 }
 
