--- a/vignettes/data-auditing.Rmd
+++ b/vignettes/data-auditing.Rmd
@@ -6,6 +6,8 @@ output:
   rmarkdown::html_vignette:
     toc: true
     toc_depth: 3
+bibliography: references.bib
+csl: apa.csl
 vignette: >
   %\VignetteIndexEntry{Data auditing: Get started}
   %\VignetteEngine{knitr::rmarkdown}
@@ -46,7 +48,7 @@ distribution and produces a *p* value. When a prior is specified, the function
 performs a Bayesian hypothesis test of the null hypothesis that the digits are
 distributed according to the reference distribution against the alternative
 hypothesis that the digits are not distributed according to the reference
-distribution and produces a Bayes factor (Kass & Raftery, 1995).
+distribution and produces a Bayes factor [@kass_1995].
 
 *Full function with default arguments:*
 
@@ -77,7 +79,7 @@ digit_test(
 
 *Example usage:*
 
-Benford’s law (Benford, 1938) is a principle that describes a pattern in many
+Benford's law [@benford_1938] is a principle that describes a pattern in many
 naturally-occurring numbers. According to Benford's law, each possible leading
 digit *d* in a naturally occurring, or non-manipulated, set of numbers occurs
 with a probability:
@@ -103,7 +105,7 @@ digit_test(sinoForest$value, check = "first", reference = "benford", prior = TRU
 The function `repeated_test()` analyzes the frequency with which values get
 repeated within a set of numbers. Unlike Benford's law, and its generalizations,
 this approach examines the entire number at once, not only the first or last
-digit. For the technical details of this procedure, see Simohnsohn (2019).
+digit. For the technical details of this procedure, see [@simonsohn_2019].
 
 *Full function with default arguments:*
 
@@ -137,9 +139,9 @@ In this example, we analyze a data set from a (retracted) paper that describes
 three experiments run in Chinese factories, where workers were nudged to use
 more hand-sanitizer. These data were shown to exhibited two classic markers of
 data tampering: impossibly similar means and the uneven distribution of last
-digits (Yu, Nelson, & Simohnson, 2018). We can use the `rv.test()` function to
-test if these data also contain a greater amount of repeated values than
-expected if the data were not tampered with.
+digits [@yu_2018]. We can use the `rv.test()` function to test if these data
+also contain a greater amount of repeated values than expected if the data were
+not tampered with.
 
 ```{r}
 repeated_test(sanitizer$value, check = "lasttwo", samples = 5000)
@@ -157,8 +159,4 @@ benchmarks:
 - [BeyondBenford](https://cran.r-project.org/package=BeyondBenford) (R package version 1.4)
 
 ## References
-
-- Benford, F. (1938). The law of anomalous numbers. In *Proceedings of the American Philosophical Society*, 551-572. - [View online](https://www.jstor.org/stable/984802)
-- Kass, R. E., & Raftery, A. E. (1995). Bayes factors. *Journal of the American Statistical Association*, *90*(430), 773-795. - [View online](https://www.tandfonline.com/doi/abs/10.1080/01621459.1995.10476572)
-- Simohnsohn, U. (2019, May 25). *Number-Bunching: A New Tool for Forensic Data Analysis*. - [View online](https://datacolada.org/77)
-- Yo, F., Nelson, L., & Simonsohn, U. (2018, December 5). *In Press at Psychological Science: A New 'Nudge' Supported by Implausible Data*. - [View online](https://datacolada.org/74)
+<div id="refs"></div>
