--- a/vignettes/sample-planning.Rmd
+++ b/vignettes/sample-planning.Rmd
@@ -6,6 +6,8 @@ output:
   rmarkdown::html_vignette:
     toc: true
     toc_depth: 3
+bibliography: references.bib
+csl: apa.csl
 vignette: >
   %\VignetteIndexEntry{Planning statistical audit samples}
   %\VignetteEngine{knitr::rmarkdown}
@@ -68,12 +70,13 @@ zero misstatements in the sample.
 First, let's take a look at how you can use the `planning()` function to
 calculate the minimum sample size for testing the hypothesis that the
 misstatement in the population is lower than the performance materiality. In
-this example the performance materiality is set to 5% of the total population
-value, meaning that the population cannot contain more than 5% misstatement.
+this example the performance materiality is set to 5 percent of the total
+population value, meaning that the population cannot contain more than 5
+percent misstatement.
 
 **Sampling objective**: Calculate a minimum sample size such that, when no
-misstatements are found in the sample, there is a 95% chance that the
-misstatement in the population is lower than 5% of the population value.
+misstatements are found in the sample, there is a 95 percent chance that the
+misstatement in the population is lower than 5 percent of the population value.
 
 A minimum sample size for this sampling objective can be calculated by
 specifying the `materiality` parameter in the `planning()` function, see the
@@ -92,12 +95,13 @@ Next, let's take a look at how you can use the `planning()` function to
 calculate the minimum sample size for estimating the misstatement in the
 population with a minimum precision. The precision is defined as the difference
 between the most likely misstatement and the upper confidence bound on the
-misstatement. For this example, the minimum precision is set to 2% of the
+misstatement. For this example, the minimum precision is set to 2 percent of the
 population value.
 
 **Sampling objective**: Calculate a minimum sample size such that, when zero
-misstatements are found in the sample, there is a 95% chance that the
-misstatement in the population is at most 2% above the most likely misstatement.
+misstatements are found in the sample, there is a 95 percent chance that the
+misstatement in the population is at most 2 percent above the most likely
+misstatement.
 
 A minimum sample size for this sampling objective can be calculated by
 specifying the `min.precision` parameter in the `planning()` function, see the
